extends Control

func _ready():

	$Label.text = "SCORE:" + String(Global.score)






func _on_Coin_collected():
	_ready()



func _on_settingsBTN_pressed():
	pass # Replace with function body.


func _on_Coin_coin_collected():
	_ready()


func _on_Coin2_coin_collected():
	_ready()


func _on_Coin5_coin_collected():
	_ready()


func _on_Coin3_coin_collected():
	_ready()


func _on_Coin4_coin_collected():
	pass # Replace with function body.
